Raven.A1
Hardware and software binary release

20260213:
  rom:      updated EmuTOS (#65a71f3 @ 20260202)
  rvnova:   better 1280x720x8bpp quality on Cirrus

20260209:
  rvnova:   1280x720x8bpp for Cirrus and WDC

20260208:
  rvnova:   WD90C33 blitter support
  
20260201:
  software: added ISA floppy disk driver

20260107:
  rom:      fixed crash related to copyback cache

20260106:
  firmware: (iksi) support Atari disk interupt

20251229:
  rom:      default to 8x8 font during boot
  rvnova:   default to 8x8 font during boot
  rvnova:   ET4000/MACH32/MACH64 drivers patched for 68060
  xboot:    patched for 68060
  isa_bios: improved details in logfile
  software: include standalone emucon2.tos in tools folder
  
20251226:
  rom:      updated EmuTOS (#24dff9a @ 20251225)
  rom:      enabled EmuTOS SCSIDRV
  rom:      include uip.tos in romdisk
  software: fixed potential stack bug in all purec based programs
  rvsnd:    fixed missing PSG flag in SND cookie
  
20251215:
  rom:      map entire 16MB isa-ram rather than only first 4MB

20251214:
  rom:      support EmuTOS Shutdown feature (when ckbd is present)
  rom:      removed nova driver specific pmmu mapping
  rvnova:   add nova driver specific pmmu mapping
  isa_bios: support isa-interrupt callbacks

20251208:
  rom:      disable store/load bypass on rev1+5 cpu
  rom:      moved motorola sp060 into bootrom
  rom:      emutos panic message now outputs on raven serial
  rvbios:   moved motorola sp060 into bootrom
  rvbios:   settime/gettime implemention for rtc
  software: rvsnd added (work in progress)
  firmware: (nessi) included version 251029

20251007:
  rom:      ensure caches enabled during vgabios calls
  rvnova:   remove temporary vgabios workarounds

20251004:
  rom:      improved generic vga compatibility
  rvnova:   improved generic vga compatibility
  rvnova:   Cirrus Logic GD5434 driver
  rvbios:   bootscreen
  software: PicoGUS driver updated

20250914: