@@ -102,7 +102,7 @@ static void setbank(uint16_t num) {
     vga_WritePortWLE(0x3ce, 0x0900 | num);
 }
 
-static bool setmode(mode_t* mode) {
+static bool setmode(gfxmode_t* mode) {
     if (vga_setmode(mode->code)) {
         configure_framebuffer();
         return true;
